# ClaudeCode

./: .gitignore  CLAUDE.md  FEATURE_IMPORTANCE_REPORT.md  requirements.txt  setup.py  setup_fx.py
win5_predictor/: .gitignore  FINAL_COMPLETION_REPORT.md  FINAL_EXECUTION_PLAN.md  FINAL_PROJECT_REPORT.md  PHASE2_TEST_REPORT.md  PHASE3_FEATURE_REPORT.md  PHASE4_MODEL_REPORT.md  PHASE5_OPTIMIZER_REPORT.md  PHASE6_ANALYSIS_REPORT.md  PHASE7_APP_REPORT.md  PROJECT_COMPLETION_SUMMARY.md  README.md  SETUP.md  STEP_BY_STEP_EXECUTION_GUIDE.md  WINDOWS_LIGHTGBM_SOLUTIONS.md  demo.py  pyproject.toml  requirements.txt  tmpclaude-2600-cwd
win5_predictor/src/analysis/: backtester.py  report.py  roi_calculator.py  visualizer.py
win5_predictor/src/app/: cli.py  streamlit_app.py  workflow.py
win5_predictor/src/bankroll/: fixed_fraction.py  kelly.py  tracker.py
win5_predictor/src/config/: settings.py  venues.py
win5_predictor/src/database/: connection.py  models.py  repository.py
win5_predictor/src/features/: builder.py  horse_features.py  interaction_features.py  jockey_features.py  odds_features.py  pedigree_features.py  race_features.py
win5_predictor/src/model/: evaluation.py  hyperopt.py  predictor.py  registry.py  trainer.py
win5_predictor/src/optimizer/: budget_optimizer.py  expected_value.py  win5_combiner.py
win5_predictor/src/scraper/: base.py  horse_profile.py  jockey_trainer.py  (+6 more)
win5_predictor/tests/: conftest.py  test_phase2_integration.py  test_phase3_features.py  test_phase4_model.py  test_phase5_optimizer.py  test_phase6_analysis.py  test_phase7_app.py
(+100 files in other folders)
