[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "win5-predictor"
version = "0.1.0"
description = "JRA Win5 予想ソフト - LightGBMベースの競馬予測"
requires-python = ">=3.10"
dependencies = [
    "lightgbm>=4.0",
    "scikit-learn>=1.3",
    "optuna>=3.4",
    "shap>=0.43",
    "pandas>=2.1",
    "numpy>=1.24",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=4.9",
    "matplotlib>=3.8",
    "plotly>=5.18",
    "click>=8.1",
    "rich>=13.7",
    "tqdm>=4.66",
    "streamlit>=1.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[project.scripts]
win5 = "app.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]
